# MCPI-Addons

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  setup.py  test.py
mcpi_addons/: PNBT.py  block.py  connection.py  entity.py  event.py  minecraft.py  util.py  vec3.py
src/: api.cpp  api.h  base64.cpp  base64.h  buttons.cpp  extra.h  helpers.cpp  helpers.h  inventory.cpp  world.cpp
src/SDL/: SDL.h  SDL_events.h  SDL_keyToInt.h  SDL_keysym.h  SDL_scancode.h  SDL_syswm.h  SDL_version.h  Xlib.h
src/libmcpi-r/: minecraft.h  patch.h
